force-app/main/default/objects/Discount__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF( AND( Start_Date__c &lt;= TODAY(), OR(End_Date__c &gt;= TODAY(), ISBLANK(End_Date__c) ) ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>