force-app/main/default/objects/Discount__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <inlineHelpText>It is used for Configuration Wise Discount on Unit while Creating Quotation as Per Selected unit Configuration</inlineHelpText>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Configuration_Required</valueSetName>
    </valueSet>
</CustomField>