force-app/main/default/objects/Discount__c/fields/Deduct_From__c.field-meta.xml
<CustomField>
    <fullName>Deduct_From__c</fullName>
    <label>Deduct From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Charge</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>