force-app/main/default/objects/Discount__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>