force-app/main/default/objects/Discount__c/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
            <value>
                <fullName>Group 6</fullName>
            </value>
            <value>
                <fullName>Group 7</fullName>
            </value>
            <value>
                <fullName>Group 8</fullName>
            </value>
            <value>
                <fullName>Group 9</fullName>
            </value>
            <value>
                <fullName>Group 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>