force-app/main/default/objects/Discount__c/fields/Percentage_of_AV__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_AV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percentage of AV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>