force-app/main/default/objects/Discount__c/fields/PSF_Amount__c.field-meta.xml
<CustomField>
    <fullName>PSF_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PSF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>